feat(backend): Phase 4 - Backend improvements
Step 4.1: Create ChatService - extract business logic from ChatController
Step 4.2: Add mark-as-read endpoint PUT /api/chat/messages/{id}/read
Step 4.3: Add workout update endpoint PUT /api/workouts/{id}
Step 4.4: Remove duplicate @Controller annotation from ChatController
Step 4.5: Add @Min(1) @Max(5) rating validation on WorkoutLog
Step 4.6: Add @Pattern validation on TimeSlot (dayOfWeek, startTime, endTime)
Step 4.7: Fix getWorkoutStats performance - use COUNT query instead of loading all
Step 4.8: Remove duplicate assertj-core dependency from pom.xml
Step 4.9: Remove hardcoded testuser fallback from WorkoutController